fix: pre-wrap description strings in schedule day list items

--- a/src/app/templates/schedule/schedule-day-list/schedule-day-list.component.scss
+++ b/src/app/templates/schedule/schedule-day-list/schedule-day-list.component.scss
@@ -52,7 +52,7 @@
   margin-bottom: 0;
 }
 
-.scheduleListDay__info__container__description {
+.scheduleListDay__info__container__description p {
   white-space: pre-wrap;
 }
 
